fix: Resolve input width issue on mobile

--- a/src/.vuepress/theme/styles/theme.styl
+++ b/src/.vuepress/theme/styles/theme.styl
@@ -6,6 +6,10 @@
 @require './wrapper'
 @require './toc'
 
+* {
+  box-sizing: border-box;
+}
+
 html, body
   padding 0
   margin 0
